# image-analysis-mcp

./: .dockerignore  .gitattributes  .gitignore  DOCKER.md  DOCKER_BUILD_SUMMARY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  image-analysis-mcp-spec.md  pyproject.toml  requirements.txt  setup.py  validate_structure.py
src/image_analysis_mcp/: __init__.py  server.py  tools.py  utils.py
src/image_analysis_mcp/analysis/: color.py  frequency.py  histogram.py  metadata.py  preview.py  spatial.py  tonal.py
tests/: __init__.py  test_tools.py
