[tool.poetry]
name = "image-analysis-mcp"
version = "1.0.0"
description = "MCP server for comprehensive read-only image analysis"
authors = ["Jim Dasher"]
readme = "README.md"
packages = [{include = "image_analysis_mcp", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastmcp = "^1.0.0"
numpy = "^2.0.0,<2.3"
opencv-python = "^4.10.0"
pillow = "^10.2.0"
rawpy = "^0.25.0"
scikit-image = "^0.24.0"
scikit-learn = "^1.5.0"
exifread = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
image-analysis-mcp = "image_analysis_mcp.server:main"
